Fix Vertical alignment for content in newspaper view
#989

--- a/src/assets/scss/recent-posts.scss
+++ b/src/assets/scss/recent-posts.scss
@@ -702,7 +702,8 @@
         padding: 0;
 
         .advgb-post-wrapper {
-
+          align-self: flex-start;
+          
           .advgb-post-title {
             margin: 0;
             padding: 0;
